<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical" >

	    <CheckBox
	        android:id="@+id/checkBox2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/visited_map"
	        android:textColor="@color/white" />

	     <CheckBox
	         android:id="@+id/checkBox1"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_toRightOf="@+id/checkBox2"
	         android:text="@string/notVisited_map"
	         android:textColor="@color/white" />
	    
	</RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.02"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:text="@string/legenda_map"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/map_icon1"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/map_icon1" 
                android:contentDescription="@string/imgDescritor_map"/>

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/visited_places_map"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/map_icon2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/map_icon2"
                android:contentDescription="@string/imgDescritor_map" />

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/notVisitedPlaces_map"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/map_icon3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/map_icon3" 
                android:contentDescription="@string/imgDescritor_map"/>

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/placesUpTo10_map"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/Main_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/main_text_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/progresText_map"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>