<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@drawable/paper_texture"
    android:focusable="true"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.57"
	    android:orientation="vertical"
	    android:paddingBottom="4dp" >

	    <TextView
	        android:id="@+id/textView_za_hory"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:gravity="center_vertical|center_horizontal"
	        android:maxLines="5"
	        android:paddingBottom="2dp"
	        android:scrollbars="vertical"
	        android:text="@string/zilinsky"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	        android:typeface="monospace" />
	
	    <View
	        android:id="@+id/line1"
	        android:layout_width="304dp"
	        android:layout_height="3dp"    
	        android:background="@android:color/black"
	        android:paddingTop="20dp" />
	 </LinearLayout>
	    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		  <TextView

		      android:layout_width="0dip"
		      android:layout_height="wrap_content"
		      android:layout_weight="0.2"
		      android:paddingBottom="1dp"
		      android:text="@string/inform_cie_o_pamiatke"
		      android:textColor="@color/black"
		      android:textSize="14sp"
		      android:textStyle="bold"
		      android:typeface="serif" />

		 <RatingBar
		    android:id="@+id/Gps_za_hory_rateing"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:isIndicator="true"
		    android:numStars="4"
		    android:stepSize="0.1" />
	  </LinearLayout>
	  
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.03"
	        android:orientation="horizontal" >
	        <ImageView
	            android:id="@+id/gps_event_img"
	            android:layout_width="0dp"
	            android:layout_height="110dp"
	            android:paddingTop="3dp"
	            android:paddingRight="3dp"
	            android:layout_weight="1.32"
	            android:adjustViewBounds="false"
	            android:clickable="true"
	            android:contentDescription="@string/hello_world"
	            android:scaleType="fitCenter"
	            android:soundEffectsEnabled="false"
	            android:src="@drawable/za" />
	        <TextView
	            android:id="@+id/Gps_za"
	            android:layout_width="0dp"
	            android:layout_height="110dp"
	            android:layout_weight="0.88"
	            android:maxLines="100"
	            android:scrollbars="vertical"
	            android:textColor="@color/black"
	            android:textSize="14sp"
	            android:typeface="serif"
	            android:width="1dp" />
	    </LinearLayout>
	  
	  <LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="0dp"
	      android:layout_weight="0.53"
	      android:gravity="right"
	      android:layout_marginBottom="2dp"
	      android:orientation="horizontal" >

	      <LinearLayout
		      android:layout_width="0dp"
		      android:layout_height="wrap_content"
		      android:layout_weight="1.32"
		      android:gravity="left"
		      android:orientation="horizontal" >
	      <Button
	          android:id="@+id/btn_add"
	          style="?android:attr/buttonStyleSmall"
	          android:layout_width="wrap_content" 
	          android:layout_height="wrap_content"
	          android:layout_marginTop="5dp"
	          android:onClick="onClick"
	          android:text="@string/pridajbtn_gps" />

	      <Button
	          android:id="@+id/btn_remove"
	          style="?android:attr/buttonStyleSmall"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_marginTop="5dp"
	          android:onClick="onClick"
	          android:text="@string/zmazbtn_gps" />
		  </LinearLayout>

	      <TextView
	          android:id="@+id/stamp"
	          android:layout_width="80dp"
	          android:layout_height="fill_parent"
	          android:layout_marginLeft="20dp"
	          android:layout_marginTop="5dp"
	          android:layout_weight="0.32"
	          android:gravity="center_vertical|center_horizontal"
	          android:background="@drawable/container_dropshadow"
	          android:text=""
	          android:textColor="@android:color/white" />

	  </LinearLayout>
		 <!--  android:background="@drawable/container_dropshadow"-->
	   <View
	        android:id="@+id/line2"
	        android:layout_width="304dp"
	        android:layout_height="2dp"
	        android:background="@android:color/black"
	        android:paddingTop="20dp" />
	   
	  <LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="0dp"
	      android:layout_weight="0.36"
	      android:orientation="horizontal" >

		  <TextView
		      android:layout_width="0dip"
		      android:layout_height="wrap_content"
		      android:layout_weight="0.2"
		      android:paddingBottom="1dp"
		      android:text="@string/info_poloha_gps"
		      android:textColor="@color/black"
		      android:textSize="14sp"
		      android:textStyle="bold"
		      android:typeface="serif" />

		  <Button
		    android:id="@+id/button_gps"
		    android:layout_width="90dp"
		    android:layout_height="wrap_content"
		    android:onClick="onClick"
		    android:layout_marginTop="5dp"
		    android:text="@string/potvrdbtn_gps" />
	  </LinearLayout>
	  <TextView
	      android:id="@+id/textPozicia"
	      android:layout_width="match_parent"
	      android:layout_height="0dp"
	      android:layout_weight="0.75"
	      android:maxLines="10"
	      android:paddingBottom="1dp"
	      android:scrollbars="vertical"
	      android:text="@string/action_settings"
	      android:textColor="@color/black"
	      android:textSize="14sp"
	      android:typeface="serif" />

	

</LinearLayout>